--- a/work05.html
+++ b/work05.html
@@ -46,6 +46,13 @@
           </button>
           <a class="navbar-brand" href="index.html">MAPLE'S BLOG</a>
         </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="work.html">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+          </div><!--/.nav-collapse -->
       </div>
     </div>
 	
