--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>GitHub Tutorial</title>
+    <title>STANLEY - Free Bootstrap Theme </title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -26,11 +26,6 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <style>
-      .work3{
-        text-align: left;
-      }
-    </style>
   </head>
 
   <body>
@@ -44,15 +39,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">MAPLE'S BLOG</a>
+          <a class="navbar-brand" href="index.html">STANLEY</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="work.html">Work</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
-          </div><!--/.nav-collapse -->
+        </div><!--/.nav-collapse -->
       </div>
     </div>
 	
@@ -61,41 +57,38 @@
 	
 	<div class="container pt">
 		<div class="row mt">
-			<div class="col-lg-6 col-lg-offset-3 centered" style="text-align: left;">
-				<h3 style="text-align: center;">BASIC GIT COMMANDS</h3>
-        <hr>
-        <p style="text-align: center;">These are some basic commands in Git to familiarize yourself</p>
-        <h3>Telling Git who you are</h3>
-        <br>
-        <p class ="work3">
-          git config --global user.name "Sam Smith"
-          <br>
-          git config --global user.email sam@example.com</p>
-        <h3>Creating a new local repository</h3>
-        <br>
-        <p class="work3">git init</p>
-        <h3>Adding files</h3>
-        <br>
-        <p class="work3">
-          git add _filename_
-          <br>
-          git add *
-        </p>
-        <h3>Committing</h3>
-        <h4>Committing changes to head (but not yet to the remote repository)</h4>
-        <br>
-        <p class="work3">git commit -m "Commit message"</p>
-        <h4>Committing any files you've added with git add, and also committing any files you've changed since then</h4>
-        <br>
-        <p class="work3">git commit -a</p>
-        <h3>Pushing (sending changes to the master branch of your remote repository)</h3>
-        <br>
-        <p class="work3">git push origin master</p>
+			<div class="col-lg-6 col-lg-offset-3 centered">
+				<h3>MY WORK</h3>
+				<hr>
+				<p>Show your work here. Dribbble shots from the awesome designer <a href="http://dribbble.com/wanderingbert">David Creighton-Pester</a>.</p>
 			</div>
 		</div>
 		<div class="row mt centered">	
-			<div class="col-lg-8 col-lg-offset-2">
-
+			<div class="col-lg-4">
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port01.jpg" alt="" /></a>
+				<p>APE</p>
+			</div>
+			<div class="col-lg-4">
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port02.jpg" alt="" /></a>
+				<p>RAIDERS</p>
+			</div>
+			<div class="col-lg-4">
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port03.jpg" alt="" /></a>
+				<p>VIKINGS</p>
+			</div>
+		</div><!-- /row -->
+		<div class="row mt centered">	
+			<div class="col-lg-4">
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port04.jpg" alt="" /></a>
+				<p>YODA</p>
+			</div>
+			<div class="col-lg-4">
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port05.jpg" alt="" /></a>
+				<p>EMPERORS</p>
+			</div>
+			<div class="col-lg-4">
+				<a class="zoom green" href="work01.html"><img class="img-responsive" src="assets/img/portfolio/port06.jpg" alt="" /></a>
+				<p>CHIEFS</p>
 			</div>
 		</div><!-- /row -->
 	</div><!-- /container -->
